Fix layout issues

--- a/slack-project/src/Header.css
+++ b/slack-project/src/Header.css
@@ -1,7 +1,7 @@
 .header {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-evenly;
   padding: 10px 0;
   background-color: var(--slack-color);
   color: white;
@@ -11,14 +11,18 @@
   flex: 0.3;
   display: flex;
   align-items: center;
-  margin-left: 20px;
+  margin-left: 10px;
+}
+
+.header__avatar {
+  margin: 0 10px;
 }
 
 /* target the class of the MUI */
 /* Making space between the Avatar and the Time icon */
 .header__left > .MuiSvgIcon-root {
   margin-left: auto;
-  margin-right: 30px;
+  margin-right: 10px;
 }
 
 .header__search {
